# tsu-taskgraph-ai

./: .env.example  .gitignore  Dockerfile  README.md  compose.prod.yaml  compose.yml  main.py  pyproject.toml
.github/: deploy.yaml
.github/workflows/: deploy.yaml  tag.yaml
app/: config.py
app/api/: health.py  router.py
app/api/v1/: ai.py  router.py
app/core/: celery_app.py  exceptions.py  security.py
app/providers/: anthropic.py  anthropic_compatible.py  base.py  gemini.py  groq.py  mistral.py  ollama.py  openai.py  openai_compatible.py  prompts.py  registry.py  utils.py
app/schemas/: __init__.py  common.py  diagrams.py  enrichment.py  health.py  mutation.py  recovery.py  skeleton.py  wiki.py
