[project]
name = "tsu-taskgraph-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Lugachev",email = "nikitalugachev149th@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
