[project]
name = "tsu-taskgraph-ai"
version = "0.1.0"
description = "A Python/FastAPI microservice acting as a smart bridge between the TaskGraph core backend and AI providers like Google Gemini and Ollama. It orchestrates DAG task decomposition, asynchronous context enrichment, and generates Mermaid.js architecture diagrams."
authors = [
    { name = "Nikita Lugachev", email = "nikitalugachev149th@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic (>=2.11.0,<3.0.0)",
    "pydantic-settings (>=2.9.0,<3.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=8.0.0,<9.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.4.0,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "httpx (>=0.28.0,<1.0.0)"
]

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pydantic.warnings.UnsupportedFieldAttributeWarning",
]
